--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update \
         git gperf kmod libexpat-dev \
         libgmp-dev libmpc-dev libmpfr-dev libssl-dev \
         libtool mmdebstrap openssl parted \
-        patchutils python3 python3-dev python3-distutils \
+        patchutils python3 python3-dev  \
         python3-setuptools  swig gnupg \
         systemd-container texinfo zlib1g-dev wget arch-test \
         linux-image-generic genimage joe mc zip \
