--- a/configs/duos/dts/cv181x_milkv_duos_sd.dts
+++ b/configs/duos/dts/cv181x_milkv_duos_sd.dts
@@ -25,10 +25,12 @@
 
 &spi3 {
 	status = "okay";
-
-	spidev@0 {
-		status = "okay";
-	};
+    spidev0: spidev@0 {
+        compatible = "spidev";
+        reg = <0>;                      /* CS 0 */
+        spi-max-frequency = <10000000>;  /* e.g. 1 MHz */
+        status = "okay";
+    };
 };
 
 &usb {
@@ -52,6 +54,10 @@
 };
 
 &uart4 {
+	status = "okay";
+};
+
+&uart2 {
 	status = "okay";
 };
 
