--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -14,12 +14,13 @@ RUN apt-get update \
         git gperf kmod libexpat-dev \
         libgmp-dev libmpc-dev libmpfr-dev libssl-dev \
         libtool mmdebstrap openssl parted \
-        patchutils python3 python3-dev  \
+        patchutils python3 python3-dev python3-pip \
         python3-setuptools  swig gnupg \
         systemd-container texinfo zlib1g-dev wget arch-test \
         linux-image-generic genimage joe mc zip \
         fakeroot git kernel-wedge quilt ccache flex bison \
         libssl-dev dh-exec rsync libelf-dev bc gcc-riscv64-unknown-elf \
+    && pip3 install --no-cache-dir --break-system-packages pycryptodome \
     && git clone --depth 1 https://github.com/milkv-duo/host-tools.git /host-tools \
     && rm -rf /host-tools/gcc/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-elf \
     && rm -rf /host-tools/gcc/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu \
